--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -1,18 +1,24 @@
 @mixin respond-to($breakpoint) {
   @if $breakpoint == "phone-down" {
-   @media (max-width: 600px) {
+   @media (max-width: 768px) {
+   @content;
+  }
+  }
+
+  @if $breakpoint == "small-device-down" {
+   @media (max-width: 420px) {
    @content;
   }
   }
 
   @if $breakpoint == "tablet-down" {
-    @media (max-width: 768px) {
+    @media (max-width: 1048px) {
     @content;
     }
   }
 
   @if $breakpoint == "tablet-landscape-down" {
-  @media (max-width: 1200px) {
+  @media (max-width: 1366px) {
   @content;
   }
 }
@@ -29,12 +35,12 @@
   }
  }
  @else if $breakpoint == "phone-up" {
-    @media (min-width: 601px) {
+    @media (min-width: 769px) {
        @content;
    }
  }
  @else if $breakpoint == "tablet-up" {
-    @media (min-width: 769px) {
+    @media (min-width: 1049px) {
        @content;
    }
  }
