--- a/src/styles/_css_art.scss
+++ b/src/styles/_css_art.scss
@@ -1,7 +1,7 @@
 .feature-image {
   position: absolute;
-  bottom: rem(200);
-  right: -10%;
+  bottom: rem(100);
+  right: 2%;
   width: rem(830);
   height: rem(506);
   transform: scale(1.5);
@@ -9,23 +9,33 @@
 
   @include respond-to("widescreen-down") {
     transform: scale(1);
-    bottom: rem(40);
+    bottom: rem(30);
   }
 
   @include respond-to("desktop-down") {
     transform: scale(1);
-    right: -10%;
     bottom: rem(-20);
+    right: -10%;
   }
 
   @include respond-to("tablet-landscape-down") {
-    transform: scale(0.6);
-    // right: -40%;
-    bottom: rem(160);
+    right: -20%;
   }
 
   @include respond-to("tablet-down") {
-    bottom: rem(60);
+    right: -30%;
+    bottom: rem(40);
+  }
+  
+  @include respond-to("phone-down") {
+    transform: scale(0.5);
+    right: -40%;
+    bottom: rem(-40);
+  }
+
+  @include respond-to("small-device-down") {
+    display: none;
+    visibility: none;
   }
 }
 
@@ -166,7 +176,7 @@
   position: absolute;
   z-index: 1;
   transform: scale(1);
-  animation: slideIn 0.6s ease forwards;
+  animation: slideIn 0.5s ease forwards;
   opacity: 0;
   right: 0;
 
@@ -428,7 +438,7 @@
 @keyframes slideIn {
   0% {
     opacity: 0;
-    right: rem(-100);
+    right: rem(-200);
   }
 
   100% {
