--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,7 @@
 $red: #ff0039;
 $red_shadow: rgb(178, 0, 40);
 $black: #000000;
+$faded_black: #161515;
 $white: #ffffff;
 $gray_dark: rgb(65, 65, 65);
 $gray_medium: #b7b7b7;
