--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -44,19 +44,24 @@
       margin-top: rem(20);
 
       @include respond-to("desktop-down") {
-        font-size: rem(30);
+        font-size: rem(20);
         letter-spacing: rem(-1);
+        margin-bottom: rem(2);
       }
     }
 
     &--four {
-      color: $black;
+      // color: $wh/;
       display: block;
       font-weight: 400;
       font-size: rem(24);
       letter-spacing: rem(-0.5);
       margin-bottom: rem(20);
       margin-top: 0;
+
+      @include respond-to("desktop-down") {
+        font-size: rem(16);
+      }
     }
 
     &--five {
@@ -65,6 +70,10 @@
       letter-spacing: rem(-0.5);
       margin-bottom: 0;
       margin-top: 0;
+
+      @include respond-to("desktop-down") {
+        font-size: rem(16);
+      }
     }
 
     &--six {
@@ -105,13 +114,13 @@
 
       @include respond-to("phone-down") {
         padding-right: 0;
-        font-size: rem(25);
+        font-size: rem(23);
         line-height: rem(35);
       }
 
       @include respond-to("small-device-down") {
-        font-size: rem(20);
-        line-height: rem(30);
+        // font-size: rem();
+        // line-height: rem(30);
       }
     }
   }
@@ -129,6 +138,12 @@
     &--items {
       font-size: rem(16);
       line-height: rem(20);
+
+      @include respond-to("small-device-down") {
+        line-height: rem(18);
+        margin-bottom: rem(12);
+        
+      }
     }
   }
 }
