--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -17,8 +17,8 @@
       }
 
       @include respond-to("tablet-down") {
-        font-size: rem(120);
-        line-height: rem(90);
+        // font-size: rem(120);
+        // line-height: rem(90);
       }
 
       @include respond-to("phone-down") {
@@ -107,9 +107,9 @@
       }
 
       @include respond-to("tablet-down") {
-        padding-right: rem(200);
-        font-size: rem(35);
-        line-height: rem(50);
+        padding-right: rem(300);
+        // font-size: rem(35);
+        // line-height: rem(50);
       }
 
       @include respond-to("phone-down") {
