--- a/src/styles/_css_art.scss
+++ b/src/styles/_css_art.scss
@@ -7,32 +7,27 @@
   transform: scale(1.5);
   z-index: 1;
 
-  @include respond-to("widescreen-down") {
+  @include respond-to('widescreen-down') {
     transform: scale(1);
     bottom: rem(30);
   }
 
-  @include respond-to("desktop-down") {
+  @include respond-to('desktop-down') {
     transform: scale(1);
     bottom: rem(-20);
     right: -10%;
   }
 
-  @include respond-to("tablet-landscape-down") {
+  @include respond-to('tablet-landscape-down') {
     right: -20%;
   }
 
-  @include respond-to("tablet-down") {
-    right: -50%;
-    bottom: rem(40);
-  }
-  
-  @include respond-to("phone-down") {
+  @include respond-to('tablet-down') {
     display: none;
     visibility: hidden;
   }
 
-  @include respond-to("small-device-down") {
+  @include respond-to('small-device-down') {
     display: none;
     visibility: none;
   }
@@ -95,7 +90,7 @@
       margin: 0 auto;
       margin-bottom: rem(5);
       position: relative;
-      &:nth-child(1) {   
+      &:nth-child(1) {
         animation-delay: 0.6s;
       }
       &:nth-child(2) {
@@ -254,7 +249,7 @@
       height: rem(50);
       margin-bottom: rem(10);
       position: relative;
-      &:nth-child(1) {   
+      &:nth-child(1) {
         animation-delay: 1s;
       }
       &:nth-child(2) {
@@ -274,7 +269,7 @@
       height: rem(10);
       margin-bottom: rem(5);
       position: relative;
-      &:nth-child(1) {   
+      &:nth-child(1) {
         animation-delay: 0.6s;
       }
       &:nth-child(2) {
